# RDKitWrapper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  makefile  rdkit_wrapper.cpp  rdkit_wrapper.def
test_csharp/: .gitignore  Program.cs  makefile
